[gd_scene load_steps=3 format=3 uid="uid://bmwv7xnilsmi3"]

[ext_resource type="Script" uid="uid://qxyftsve6caj" path="res://addons/PowerKey/Example/Stress Test.gd" id="1_6hlxh"]
[ext_resource type="PackedScene" uid="uid://cklwwr4htvoa0" path="res://addons/PowerKey/Editor/Editor Inspector/PKExpression Editor.tscn" id="2_j1gsl"]

[node name="Stress Test" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_6hlxh")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="System Performance" type="PanelContainer" parent="VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox/System Performance"]
layout_mode = 2

[node name="Current FPS" type="Label" parent="VBox/System Performance/HBox"]
layout_mode = 2
text = "Current FPS"
metadata/PKExpressions = "L:text current_fps"

[node name="Sep 1" type="VSeparator" parent="VBox/System Performance/HBox"]
layout_mode = 2

[node name="Min FPS" type="Label" parent="VBox/System Performance/HBox"]
layout_mode = 2
text = "Min FPS"
metadata/PKExpressions = "L:text min_fps"

[node name="Sep 2" type="VSeparator" parent="VBox/System Performance/HBox"]
layout_mode = 2

[node name="Max FPS" type="Label" parent="VBox/System Performance/HBox"]
layout_mode = 2
text = "Max FPS"
metadata/PKExpressions = "L:text max_fps"

[node name="Sep 1" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="PKExpressions" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="PKExpression Editor" parent="VBox/PKExpressions" instance=ExtResource("2_j1gsl")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Dropdown Button Panel" parent="VBox/PKExpressions/PKExpression Editor" index="0"]
visible = false

[node name="Content" parent="VBox/PKExpressions/PKExpression Editor" index="1"]
visible = true

[node name="Indent" parent="VBox/PKExpressions/PKExpression Editor/Content" index="0"]
visible = false

[node name="HFlow" type="HFlowContainer" parent="VBox/PKExpressions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Button Clear" type="Button" parent="VBox/PKExpressions/HFlow"]
self_modulate = Color(1, 0.345098, 0.278431, 1)
layout_mode = 2
text = "Clear"

[node name="Button Add 1" type="Button" parent="VBox/PKExpressions/HFlow"]
layout_mode = 2
text = "+1"

[node name="Button Add 100" type="Button" parent="VBox/PKExpressions/HFlow"]
layout_mode = 2
text = "+100"

[node name="Button Add 1k" type="Button" parent="VBox/PKExpressions/HFlow"]
layout_mode = 2
text = "+1,000"

[node name="Button Add 10k" type="Button" parent="VBox/PKExpressions/HFlow"]
layout_mode = 2
text = "+10,000"

[node name="Button Add 100k" type="Button" parent="VBox/PKExpressions/HFlow"]
layout_mode = 2
text = "+100,000"

[node name="PKExpression Count" type="Label" parent="VBox/PKExpressions/HFlow"]
unique_name_in_owner = true
layout_mode = 2
text = "PKExp & Node Count: 0"

[node name="Sep 2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="Test Scenes" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Button Add Example" type="Button" parent="VBox/Test Scenes"]
layout_mode = 2
size_flags_horizontal = 3
text = "Instantiate new \"Example\" Scene"

[node name="Button Clear" type="Button" parent="VBox/Test Scenes"]
self_modulate = Color(1, 0.346577, 0.280009, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Clear Scenes"

[node name="Scene Host" type="ScrollContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="VBox" type="VBoxContainer" parent="VBox/Scene Host"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Host" type="Node" parent="VBox"]
unique_name_in_owner = true

[connection signal="on_update" from="VBox/PKExpressions/PKExpression Editor" to="." method="_on_pkexpression_editor_update"]
[connection signal="pressed" from="VBox/PKExpressions/HFlow/Button Clear" to="." method="_on_button_clear_expressions_pressed"]
[connection signal="pressed" from="VBox/PKExpressions/HFlow/Button Add 1" to="." method="_on_button_add_expression_pressed" binds= [1]]
[connection signal="pressed" from="VBox/PKExpressions/HFlow/Button Add 100" to="." method="_on_button_add_expression_pressed" binds= [100]]
[connection signal="pressed" from="VBox/PKExpressions/HFlow/Button Add 1k" to="." method="_on_button_add_expression_pressed" binds= [1000]]
[connection signal="pressed" from="VBox/PKExpressions/HFlow/Button Add 10k" to="." method="_on_button_add_expression_pressed" binds= [10000]]
[connection signal="pressed" from="VBox/PKExpressions/HFlow/Button Add 100k" to="." method="_on_button_add_expression_pressed" binds= [100000]]
[connection signal="pressed" from="VBox/Test Scenes/Button Add Example" to="." method="_on_button_add_scene_pressed"]
[connection signal="pressed" from="VBox/Test Scenes/Button Clear" to="." method="_on_button_clear_scenes_pressed"]

[editable path="VBox/PKExpressions/PKExpression Editor"]
